--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
@@ -29,10 +29,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-          </Group>
+          <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="0" pref="444" max="32767" attributes="0"/>
@@ -66,9 +63,8 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                   <Component id="jLabel1" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                   <Component id="jPanel5" pref="417" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -125,7 +121,6 @@
                                           </Group>
                                       </Group>
                                   </Group>
-                                  <Component id="lbBHBD" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbKhuyenMai" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbBHKT" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbGia" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -135,17 +130,11 @@
                                   <Component id="lbcName2" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbcGia1" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbcBHKT" alignment="1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lbcBHBD" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbcKhuyenMai" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="jComboBox1" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbcSL1" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="lbcLoai" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="btnInHoaDon" min="-2" pref="66" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="btnSave" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lbGia1" min="-2" max="-2" attributes="0"/>
@@ -187,15 +176,10 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lbBHBD" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lbcBHBD" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lbBHKT" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lbcBHKT" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lbGia" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lbcGia1" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -205,12 +189,7 @@
                           <Component id="lbGia1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lbcgiasaukm" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btnInHoaDon" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnSave" alignment="1" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace pref="15" max="32767" attributes="0"/>
+                      <EmptySpace pref="125" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -248,14 +227,6 @@
                 <Property name="text" type="java.lang.String" value="Khuy&#x1ebf;n M&#xe3;i"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lbBHBD">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI" size="14" style="1"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="B&#x1ea3;o H&#xe0;nh Ng&#xe0;y B&#x110;:"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JLabel" name="lbGia">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -274,28 +245,10 @@
                 <Property name="text" type="java.lang.String" value="jLabel13"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lbcBHBD">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="jLabel14"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JLabel" name="lbcGia1">
               <Properties>
                 <Property name="text" type="java.lang.String" value="jLabel15"/>
               </Properties>
-            </Component>
-            <Component class="javax.swing.JButton" name="btnInHoaDon">
-              <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Smartphone_sales_management/UI/Icon/print.png"/>
-                </Property>
-                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-                  <Border info="null"/>
-                </Property>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInHoaDonActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="lbTrangThai">
               <Properties>
@@ -309,19 +262,6 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="jLabel10"/>
               </Properties>
-            </Component>
-            <Component class="javax.swing.JButton" name="btnSave">
-              <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Smartphone_sales_management/UI/Icon/confirm.png"/>
-                </Property>
-                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-                  <Border info="null"/>
-                </Property>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JComboBox" name="jComboBox1">
               <Properties>
@@ -346,7 +286,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="B&#x1ea3;o H&#xe0;nh Ng&#xe0;y KT:"/>
+                <Property name="text" type="java.lang.String" value="Th&#x1edd;i gian BH"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lbcBHKT">
